Fix WYSIWYG icons getting cropped in MAC OS

--- a/css/liveblog.css
+++ b/css/liveblog.css
@@ -149,9 +149,9 @@ a.liveblog-form-entry::-webkit-input-placeholder {
 	position: relative;
 	margin: 1px;
 	border: solid 1px rgba(0, 0, 0, 0.0);
-	padding: 2px 1px;
-	width: 20px;
-	height: 20px;
+	padding: 1px;
+	width: 24px;
+	height: 24px;
 	line-height: 20px;
 	cursor: pointer;
 }
